--- a/iv.yaml
+++ b/iv.yaml
@@ -1,4 +1,4 @@
 lenguaje: python
-entidad: src/resenia.py
-entidad: src/conjunto_resenias.py
-entidad: src/aspectos.py
+entidad: resenia/resenia.py
+entidad: resenia/conjunto_resenias.py
+entidad: resenia/aspectos.py
