--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["JAntonioVR"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pyflakes = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
