--- a/.github/workflows/subida_dockerhub.yml
+++ b/.github/workflows/subida_dockerhub.yml
@@ -1,11 +1,16 @@
 name: subida-dockerhub
 on: [push]
 jobs:
-  construccion-del-contenedor:
+  construccion-subida-del-contenedor:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-  subida-a-dockerhub:
-    needs: construccion-del-contenedor
-    steps:
+      - name: Docker Login
+        uses: docker/login-action@v1.10.0
+        with:
+          # Username used to log against the Docker registry
+          username: jantoniovr
+          # Password or personal access token used to log against the Docker registry
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - run: docker build -t jantoniovr/iv-2021-2022 .
+      - run: docker push jantoniovr/iv-2021-2022
