--- a/.github/workflows/subida_dockerhub.yml
+++ b/.github/workflows/subida_dockerhub.yml
@@ -9,9 +9,21 @@ jobs:
         uses: docker/login-action@v1.10.0
         with:
           # Username used to log against the Docker registry
-          username: jantoniovr
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - run: docker build -t jantoniovr/iv-2021-2022 .
       - run: docker push jantoniovr/iv-2021-2022
+      
+  sincronizacion_readme_dockerhub:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Dockerhub Readme
+        uses: ms-jpq/sync-dockerhub-readme@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          readme: ./README.md
+          repository: IV-2021-2022
       
