--- a/.github/workflows/subida_dockerhub.yml
+++ b/.github/workflows/subida_dockerhub.yml
@@ -25,5 +25,5 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           readme: ./README.md
-          repository: IV-2021-2022
+          repository: JAntonioVR/IV-2021-2022
       
