--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,21 @@
 version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
-# orbs:
+orbs:
   # The python orb contains a set of prepackaged CircleCI configuration you can use repeatedly in your configuration files
   # Orb commands and jobs help you with common scripting around a language/tool
   # so you dont have to copy and paste it everywhere.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
-  # python: circleci/python@1.2
+  python: circleci/python@1.2
 
 jobs:
   test:
-    machine: true
+    docker:
+      - image: jantoniovr/iv-2021-2022
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
     steps:
-      # - checkout
-      # - docker/check:
-      #    docker-username: DOCKERHUB_USERNAME  # DOCKER_LOGIN is the default value, if it exists, it automatically would be used.
-      #   docker-password: DOCKERHUB_PASSWORD  # DOCKER_PASSWORD is the default value
-      # - docker/pull:
-      #    images: 'jantoniovr/iv-2021-2022'
-      # - run:
-      #   command: docker run -t -v `pwd`:/app/test jantoniovr/iv-2021-2022
-      - run: echo OK
+      - run: docker run -t -v `pwd`:/app/test jantoniovr/iv-2021-2022
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
