--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,11 @@ orbs:
 
 jobs:
   test:
-    docker:
-      - image: jantoniovr/iv-2021-2022
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
+    machine: 
+      image: ubuntu-2004:202010-01
     steps:
+      - checkout
+      - run: docker login --username $DOCKERHUB_USERNAME --password $DOCKERHUB_PASSWORD
       - run: docker run -t -v `pwd`:/app/test jantoniovr/iv-2021-2022
 
 # Invoke jobs via workflows
