--- a/.github/workflows/subida_dockerhub.yml
+++ b/.github/workflows/subida_dockerhub.yml
@@ -3,6 +3,9 @@ on: [push]
 jobs:
   construccion-subida-del-contenedor:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.10-slim, 3.9-slim, 3.8-slim]
     steps:
       - uses: actions/checkout@v2
       - name: Docker Login
@@ -12,6 +15,6 @@ jobs:
           username: jantoniovr
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - run: docker build -t jantoniovr/iv-2021-2022 .
-      - run: docker push jantoniovr/iv-2021-2022
+      - run: docker build --build-arg PYHTON_VERSION=${{ matrix.python-version }} -t jantoniovr/iv-2021-2022:${{ matrix.python-version }} .
+      - run: docker push jantoniovr/iv-2021-2022:${{ matrix.python-version }}
       
