--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - image: jantoniovr/iv-2021-2022:<< parameters.python-version >>
     steps:
       - checkout
-      - run: echo `whoami` && echo $PATH && echo `pwd` && which python && python --version && ls -al
+      - run: echo `whoami` && echo $PATH && echo `pwd` && which python && python --version && ls /home/iv_app/.local/bin/
       - run: poetry run pytest
       #- run: invoke test
       #- setup_remote_docker:
