--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,18 +12,12 @@ jobs:
     parameters:
       python-version:
         type: string
-        default: "3.8-slim"
+        #default: "3.8-slim"
     docker:
       - image: jantoniovr/iv-2021-2022:<< parameters.python-version >>
     steps:
       - checkout
-      - run: echo `whoami` && echo $PATH && echo `pwd` && which python && python --version && ls /home/iv_app/.local/bin/
-      - run: poetry run pytest
-      #- run: invoke test
-      #- setup_remote_docker:
-      #    version: 19.03.13
-      #- run: docker run -t -v `pwd`:/app/test jantoniovr/iv-2021-2022
-      # - run: echo "OK"
+      - run: invoke test
       
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
