--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     parameters:
       python-version:
         type: string
-        #default: "3.8-slim"
+        default: "3.8-slim"
     docker:
       - image: jantoniovr/iv-2021-2022:<< parameters.python-version >>
     steps:
@@ -28,4 +28,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              python-version: ['3.10-slim', '3.9-slim', '3.8-slim']
+              python-version: ['3.10-slim', '3.9-slim', '3.8-slim', '3.10', '3.9', '3.8']
