--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,9 @@
 version: 2.1
-# See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  # The python orb contains a set of prepackaged CircleCI configuration you can use repeatedly in your configuration files
-  # Orb commands and jobs help you with common scripting around a language/tool
-  # so you dont have to copy and paste it everywhere.
-  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/python
   python: circleci/python@1.2
 
 jobs:
+  # Testeado del código con las distintas versiones de Python
   test:
     parameters:
       python-version:
@@ -19,14 +15,11 @@ jobs:
       - checkout
       - run: invoke test
       
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  sample: 
     jobs:
       - test:
           matrix:
             parameters:
               python-version: ['3.10-slim', '3.9-slim', '3.8-slim', '3.10', '3.9', '3.8']
-              
+
