Elimino versiones no slim de la CI (#36)
Elimino por redundancia de versiones las versiones 3.8, 3.9 y 3.10.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10-slim, 3.9-slim, 3.8-slim, '3.10', '3.9', '3.8']
+        python-version: [3.10-slim, 3.9-slim, 3.8-slim]
     steps:
       - uses: actions/checkout@v2
       - name: Docker Login
