--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,5 @@ workflows:
       - test:
           matrix:
             parameters:
-              python-version: ['3.10-slim', '3.9-slim', '3.10', '3.9', '3.8']
+              python-version: ['3.10-slim', '3.9-slim']
 
