Parámetros de configuración de logging (#41)
Añado al fichero de configuración algunos parámetros para configurar el logging

--- a/configuration/config.ini
+++ b/configuration/config.ini
@@ -2,8 +2,9 @@
 dataset = data/Restaurant_Reviews.tsv
 
 [LOGGING]
-log = no
-output = reviews.log
+log = yes
+output = logs/reviews.log
+level = DEBUG
 
 [DEBUG]
 debug = no
