--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,11 @@ jobs:
       - image: jantoniovr/iv-2021-2022:<< parameters.python-version >>
     steps:
       - checkout
+      - run: export DATASET=data/Restaurant_Reviews.tsv
+      - run: export LOGGING_DIR=logs
+      - run: export LOGGING_FILE=tests.log
+      - run: export LOGGING_LEVEL=DEBUG
+      - run: export LOGGING_FORMAT='%(levelname)s : %(message)s'
       - run: invoke test
 
 workflows:
