--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     container: jantoniovr/iv-2021-2022:3.8-slim
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout
       - run: echo 'export DATASET=data/Restaurant_Reviews.tsv' >> $BASH_ENV
       - run: echo 'export LOGGING_DIR=logs' >> $BASH_ENV
       - run: echo 'export LOGGING_FILE=tests.log' >> $BASH_ENV
