--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -37,6 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: echo `whoami`
       - run: | 
           docker run -t -v `pwd`:/app/test \
             -e DATASET='data/Restaurant_Reviews.tsv' \
