--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: chmod +rw /app/test/logs
+      - run: chmod +rw logs
       - run: | 
           docker run -t -v `pwd`:/app/test \
             -e DATASET='data/Restaurant_Reviews.tsv' \
