--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -37,11 +37,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: chmod +rw logs
       - run: | 
           docker run -t -v `pwd`:/app/test \
             -e DATASET='data/Restaurant_Reviews.tsv' \
-            -e LOGGING_DIR='/app/test/logs' \
+            -e LOGGING_DIR='/tmp/' \
             -e LOGGING_FILE='tests.log' \
             -e LOGGING_LEVEL='DEBUG' \
             -e LOGGING_FORMAT='%(levelname)s - %(message)s' \
