--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,7 +1,7 @@
+# Construccion de las distintas versiones del contenedor y subida a DockerHub
 name: subida-dockerhub
 on: [push]
 jobs:
-  # Construccion de las distintas versiones del contenedor y subida a DockerHub
   construccion-subida-del-contenedor:
     runs-on: ubuntu-latest
     strategy:
@@ -19,7 +19,10 @@ jobs:
       - run: docker build --build-arg PYHTON_VERSION=${{ matrix.python-version }} -t jantoniovr/iv-2021-2022:${{ matrix.python-version }} .
       - run: docker push jantoniovr/iv-2021-2022:${{ matrix.python-version }}
 
-  # Sincronizacion del README del repositorio de GitHub con el de DockerHub
+# Sincronizacion del README del repositorio de GitHub con el de DockerHub
+name: sincronizacion-readme
+on: [push]
+jobs:
   sincronizacion_readme_dockerhub:
     runs-on: ubuntu-latest
     steps:
@@ -32,12 +35,17 @@ jobs:
           readme: "./README.md"
           repository: jantoniovr/iv-2021-2022
 
-  # Ejecucion de los test con el contenedor base 3.8-slim
+# Ejecucion de los test con el contenedor base 3.8-slim
+name: test-code
+on: [push]
+jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: | 
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Execute test
+        run: | 
           docker run -t -v `pwd`:/app/test \
             -e DATASET='data/Restaurant_Reviews.tsv' \
             -e LOGGING_DIR='/tmp/' \
