--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Execute test
-        run: | 
-          docker run -t -v `pwd`:/app/test \
-            -e DATASET='data/Restaurant_Reviews.tsv' \
-            -e LOGGING_DIR='/tmp/' \
-            -e LOGGING_FILE='tests.log' \
-            -e LOGGING_LEVEL='DEBUG' \
-            -e LOGGING_FORMAT='%(levelname)s - %(message)s' \
-            jantoniovr/iv-2021-2022:3.8-slim
+        run: docker run -t -v `pwd`:/app/test jantoniovr/iv-2021-2022:3.8-slim
